@@ -253,7 +253,8 @@ $LANG = array(
 'L_MEDIAS_DOCUMENTS'								=> 'Dokumente',
 'L_MEDIAS_CREATE_FOLDER'							=> 'Ordner erstellen',
 'L_MEDIAS_SUBMIT_FILE'								=> 'Abschicken',
-'L_MEDIAS_MAX_UPOLAD_FILE'							=> 'Maximale Größe der Datei',
+'L_MEDIAS_MAX_UPLOAD_FILE'							=> 'Maximale Größe der Datei',
+'L_MEDIAS_MAX_UPLOAD_NBFILE'						=> 'Maximale Anzahl an Dateien pro upload',
 'L_MEDIAS_MAX_POST_SIZE'							=> 'Maximale Datengröße',
 'L_MEDIAS_DIRECTORY'								=> 'Ort',
 'L_MEDIAS_FOLDER'									=> 'Datei',
