@@ -262,7 +262,8 @@ $LANG = array(
 'L_MEDIAS_DOCUMENTS'										=> 'Documents',
 'L_MEDIAS_CREATE_FOLDER'									=> 'Create folder',
 'L_MEDIAS_SUBMIT_FILE'										=> 'Send',
-'L_MEDIAS_MAX_UPOLAD_FILE'									=> 'Maximum file size',
+'L_MEDIAS_MAX_UPLOAD_FILE'									=> 'Maximum file size',
+'L_MEDIAS_MAX_UPLOAD_NBFILE'					        	=> 'Max number of files per upload',
 'L_MEDIAS_MAX_POST_SIZE'									=> 'Maximum data size',
 'L_MEDIAS_DIRECTORY'										=> 'Location',
 'L_MEDIAS_FOLDER'											=> 'File',
