@@ -299,7 +299,8 @@ $LANG = array(
 'L_MEDIAS_TITLE'					=> 'Gestion dels media',
 'L_MEDIAS_DIRECTORY' 				=> 'Emplaçament',
 'L_MEDIAS_BACK'						=> 'Retorn a la lista dels mèdia',
-'L_MEDIAS_MAX_UPOLAD_FILE'			=> 'Talha maxi dels fichièrs',
+'L_MEDIAS_MAX_UPLOAD_FILE'			=> 'Talha maxi dels fichièrs',
+'L_MEDIAS_MAX_UPLOAD_NBFILE'		=> 'Nombre maxi de fichiers par envoi',
 'L_MEDIAS_MAX_POST_SIZE'			=> 'Talha maxi de las donadas',
 'L_MEDIAS_SUBMIT_FILE'				=> 'Enviar',
 'L_MEDIAS_IMAGES'					=> 'Imatges',
